# Hackthon-Phase-04-

./: PROJECT_SUMMARY.md  README.md  pyproject.toml
backend/websocket/: __init__.py  handlers.py  manager.py  redis_client.py
chatbot/: validate.py
chatbot/tests/: test_mcp_executor.py
specs/003-ai-chatbot/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-realtime-collaboration/: FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OVERVIEW.md  PROGRESS.md  README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-realtime-collaboration/contracts/: websocket-api.md
